[package]
name = "pushit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "ext/twilio-rust" }
tide = "0.16.0"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"

k8s-openapi = { version = "0.13", default-features = false, features = ["v1_17"] } # Kube-rs depends on k8s-openapi
kube = { version = "0.65", default-features = true, features = ["derive"] } # Library for talking to Kubernetes API
